@@ -1,3 +1,7 @@
+Wed Jun  4 14:26:16 CEST 2008 Christian Anthon <anthon@kiku.dk>
+
+	* render.c: fix problems with 2d player turn arrows
+
 Wed Jun  4 10:38:36 CEST 2008 Christian Anthon <anthon@kiku.dk>
 
 	* Makefile.am, board3d/Makefile.am, configure.in: do "PKGDATADIR" the
